# DPP

./: .gitignore  README.md  data.py  devbox.json  generator.py  paper.ipynb  paper.py  plot.py  pyproject.toml
scripts/: generalization.py  graph.py  kmeans.py  notebook.ipynb
tests/: test_generalization.py  test_graph.py  test_kmeans.py  test_paper.py  test_readme.sh
