[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["rikyiso01 <riky.isola@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
jupyter = "^1.0.0"
faker = "^20.1.0"
networkx = "^3.2.1"
typer = "^0.9.0"
rich = "^13.7.0"
pydantic = "^2.5.2"
scipy = "^1.11.4"
pyyaml = "^6.0.1"
pydot = "^1.4.2"
pyqt6 = "^6.6.1"
seaborn = "^0.13.0"
coverage = "^7.3.3"
pytest = "^7.4.3"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
